--- a/专利/专利问题.md
+++ b/专利/专利问题.md
@@ -4,4 +4,4 @@
 审查员在审查专利申请文件的时候，也需要检索现有技术。而现有技术的概念是：在申请日之前为国内外公众所知的技术。
 国内外为公众所知有三种方式：文件公开，使用公开，其他方式公开。即便视为撤回，这个文件也已经处于公开的状态。
 所以，只要是审查员可以检索到的文件都可能会影响申请文件的新颖性或创造性。
-理解：如果涉及技术，该技术因为已公开，可以直接使用；如果是创新方法的思想，因为被撤回，不影响申请，但是会影响创造性。
+理解：如果涉及技术，该技术因为已公开，可以直接使用，但不能以该技术作为创新方法申请专利；如果专利方向是否相似，因为被撤回，应该不算作相似专利，但是会影响创造性。
