--- a/Base/Python/类与对象know/概念.md
+++ b/Base/Python/类与对象know/概念.md
@@ -60,3 +60,11 @@ def show():
     print('我是一个函数')
 stu1.show = show
 stu1就多了一个方法
+
+三、类的理解。
+(1)类属性与实例属性
+1、一个类被实例化，这个实例会拥有这个类的类属性，此时**修改类的类属性，实例的这个属性（类属性）**也会变化
+2、当这个**实例的类属性被赋值**之后，这个属性会变成**实例属性**，此时修改类属性不会改变实例属性。
+3、类属性不受实例属性左右。
+4、如果删除一个实例的与类属性同名的实例属性，该同名属性又会变为类属性，受类属性修改而变化
+5、在类确定或者实例化之后，也可以增加和修改属性，其方法就是通过类或者实例的点号操作来实现，即object.attribute，可以实现对属性的修改和增加。
