--- a/Base/Python/类与对象know/三大特征.md
+++ b/Base/Python/类与对象know/三大特征.md
@@ -2,7 +2,66 @@
   将数据（属性）和行为（方法）包装到类对象之中。在方法内部对属性进行操作，在类对象的外部调用方法。这样，无需关心方法内部的具体实现细节，从而降低了复杂度。
   在Python没有专门的修饰符用于属性的私有，如果该属性不希望在类对象外部被访问，在实例属性前面加两个“_”
 
-二、继承（提高代码的复用性）
+二、继承（提高代码的复用性，实现属性和方法的继承）
+1、继承者一般称为子类，被继承者一般称为父类
+2、子类拥有父类的全部方法的和属性
+3、子类可以对父类中的方法进行**重写**，如果子类重写了父类的方法，那么调用同样的方法时，就使用子类的方法
+4、一个类可以继承多个类，称为**多重继承**
+   假设一个类的多重继承:
+   class K1(object):
+      def foo(self):
+         print "K1-foo"
+
+   class K2(object):
+      def foo(self):
+          print "K2-foo"
+      def bar(self):
+          print "K2-bar"
+
+   class J1(K1, K2):
+      pass
+   foo()方法调用顺序为:C==>J1==>J2==>K1,这种对继承属性和方法搜索的顺序称为“广度优先”
+
+5、子类调用父类方法。
+  方法一：**父类.方法**
+  方法二：**super函数**。
+  super() 函数是用于调用父类(超类)的一个方法。
+  super() 是用来解决多重继承问题的，直接用类名调用父类方法在使用单继承的时候没问题，但是如果使用多继承，会涉及到查找顺序（MRO）、重复调用（钻石继承）等种种问题。
+
+  super的调用格式为:
+  super(要调用父类方法的类名, 实例).方法名（如果是在类中调用super，可以用self）
+  如果有多重继承，且父类都有相同的方法，super会优先调用**第一个被继承**的父类中的方法
+
+  一个类的 MRO 列表就是合并所有父类的 MRO 列表，并遵循以下三条原则：
+  子类永远在父类前面
+  如果有多个父类，会根据它们在列表中的顺序被检查
+  如果对下一个类存在两个合法的选择，选择第一个父类
+  测试例子：
+  class Base(object):
+    def __init__(self):
+        print("enter Base")
+        print("leave Base")
+
+
+  class A(Base):
+      def __init__(self):
+          print("enter A")
+          super(A, self).__init__()
+          print("leave A")
+
+
+  class B(Base):
+      def __init__(self):
+          print("enter B")
+          super(B, self).__init__()
+          print("leave B")
+
+
+  class C(A, B):
+      def __init__(self):
+          print("enter C")
+          super(C, self).__init__()
+          print("leave C")
+  c = C()
 
 三、多态（提高代码的可扩展性和可维护性）
-   
