--- a/Base/Python/类与对象know/概念.md
+++ b/Base/Python/类与对象know/概念.md
@@ -35,14 +35,15 @@ def static_method():
 def class_method(cls):
     pass
 ``
+**静态方法和类方法既可以通过实例调用，也可以通过类来调用，而一般方法必须用通过绑定实例调用。**
 
 5、初始化方法
 class A:
     def __init__(self, name):
-        self.name = name  # self.name称为实体属性，用赋值操作将局部变量name的值赋给了实体属性
+        self.name = name  # self.name称为实体属性，用赋值，操作将局部变量name的值赋给了实体属性
 
 
-6、实例动态绑定方法。
+6、实例动态绑定属性和方法。
 类的实例可以再次绑定属性和方法
 例如：
 class Student:
@@ -68,3 +69,14 @@ stu1就多了一个方法
 3、类属性不受实例属性左右。
 4、如果删除一个实例的与类属性同名的实例属性，该同名属性又会变为类属性，受类属性修改而变化
 5、在类确定或者实例化之后，也可以增加和修改属性，其方法就是通过类或者实例的点号操作来实现，即object.attribute，可以实现对属性的修改和增加。
+
+(2)类的方法
+方法是类内部定义函数，只不过这个函数的第一个参数是self。（可以认为方法是类属性，但不是实例属性）
+必须将类实例化之后，才能通过实例调用该类的方法。调用的时候在方法后面要跟括号（括号中默认有self参数，但是不写出来。）
+
+通过实例调用方法，我们称这个方法绑定在实例上。
+调用绑定方法，实例.方法名()
+调用非绑定方法，例如super调用被重写的父类方法
+
+
+
