--- a/Base/Python/类与对象know/三大特征.md
+++ b/Base/Python/类与对象know/三大特征.md
@@ -1,6 +1,7 @@
 一、封装（提高程序的安全性）
   将数据（属性）和行为（方法）包装到类对象之中。在方法内部对属性进行操作，在类对象的外部调用方法。这样，无需关心方法内部的具体实现细节，从而降低了复杂度。
-  在Python没有专门的修饰符用于属性的私有，如果该属性不希望在类对象外部被访问，在实例属性前面加两个“_”
+  在Python没有专门的修饰符用于属性的私有，但是可以在准备私有化的属性（包括方法、数据）名字前面加双下划线。
+  如果要调用那些私有属性，可以使用property函数。
 
 二、继承（提高代码的复用性，实现属性和方法的继承）
 1、继承者一般称为子类，被继承者一般称为父类
@@ -65,3 +66,6 @@
   c = C()
 
 三、多态（提高代码的可扩展性和可维护性）
+例如:
+repr()函数，它能够针对输入的任何对象返回一个字符串。这就是多态的代表之一
+有Cat和Dog两个类，都继承了类Animal，它们都有talk()方法，输入不同的动物名称，会得出相应的结果。
