--- a/Python/high/装饰器.md
+++ b/Python/high/装饰器.md
@@ -1,6 +1,7 @@
 # 一、概念
 装饰器让你在一个函数的前后去执行代码。
 # 个人理解：装饰器是将被装饰和函数作为参数传递到装饰器（函数）中执行
+#           装饰器类似数学中的复合函数，在函数上面再套一个函数，也就是y = g(f(x))
 
 # 二、第一个装饰器：
 def a_new_decorator(a_func):
