--- a/Python/base/类与对象know/概念.md
+++ b/Python/base/类与对象know/概念.md
@@ -7,7 +7,7 @@
 
 二、类的组成
 1、类属性：
-定义类里面，类中方法之外的变量，被该类的所有对象所共享
+定义在类里面，类中方法之外的变量，被该类的所有对象所共享
 
 2、实例方法:
 写在类里面，没有任何装饰的方法，第一个参数必须要默认传实例对象，一般习惯用self。
@@ -40,7 +40,7 @@ def class_method(cls):
 5、初始化方法
 class A:
     def __init__(self, name):
-        self.name = name  # self.name称为实体属性，用赋值，操作将局部变量name的值赋给了实体属性
+        self.name = name  # self.name称为实体属性，用赋值操作将局部变量name的值赋给了实体属性
 
 
 6、实例动态绑定属性和方法。
