--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -1,3 +1,86 @@
+# 一、获取帮助文档
+  # (1)man 
+  作用：获得外部命令帮助信息
+  man [命令或配置文件]
+  man -f 命令  //显示给定关键字的简短描述信息
+
+  # (2)help 获得内置命令的帮助信息
+  一部分基础功能的系统命令是直接内嵌在shell中的，系统加载启动后会随着shell一起加载，常驻系统内存中，这部分命令被称为“内置命令”；相应的其他命令被称为“外部命令”。
+  help 命令
+
+  # (3)命令自己的帮助文档
+  命令 --help
+
+  # (4)判断命令是外部命令还是内置命令
+  type cd
+  出现: cd is a shell builtin，说明cd是内置命令
+  type ls 
+  出现：ls is  hashed(usr/bin/ls),说明ls是外部命令
+
+# 二、文件目录类
+  # (1)pwd 显示当前工作目录的绝对路径 
+    以/开头是绝对路径，没有/是相对路径
+  # (2)cd 切换目录
+    cd 绝对路径  cd /usr/share/nginx
+    cd 相对路径 cd ../usr
+    cd 上一个路径  cd -
+  # (3)ls 列举出当前目录下面的所有内容
+    ls -a  (a是all的缩写，包括.和..及隐藏文件都会显示)
+    ls -l  长数据窜列出（包括文件类型、权限、所有者、创建时间）
+    ll等于ls -l
+  # (4)medir 创建目录
+    mkdir a
+    mkdir a a/b a/b/c
+    mkdir -p a/b/c
+  # (5)rmdir 删除目录
+    rmdir a
+    rmdir b c
+    rmdir -p a/b/c
+  # (6)touch 创建空文件
+    touch filename
+  # (7)vim 也能创建，但是里面要写内容
+  # (8)cp 复制文件或目录
+    cp file1 /home/test/file2  覆盖文件(实际默认cp -i，即会先提示)
+    cp file /home/test/  复制文件到目录下
+    \cp file1 /home/test/file2  用原生命令直接覆盖，不出现提示
+    cp -r 递归复制整个文件夹
+  # (9)rm 删除文件或目录
+    rm filename
+    rm -r 递归删除目录中所有内容
+    rm -f 强制执行删除操作，不提示确认
+    rm -v 显示指令的详细执行过程
+    rm -f ./* 删除当前目录下所有文件
+  # (10)mv 移动文件
+    mv a /home/  移动文件到目录
+    mv a /home/b 移动文件并重命名
+    mv a b 重命名文件
+  # (11)cat 查看文件内容（catch）
+    cat -n 显示所有行号，包括空行
+  # (12)more 文件内容分屏查看器
+    more filename
+  # (13)less 分屏显示文件内容
+    比more指令更强大
+    less并不是一次将整个文件加载之后才显示，而是根据显示需要加载内容，对于显示大型文件具有较高的效率
+  # (14)echo 输出内容到控制台
+    echo 后面所有内容
+    echo -e 支持反斜线控制的字符转换
+  # (15)> 输出重定向 和 >> 追加
+    ls -l > 文件  将ls查看信息写入到文件中
+    ls -al >>文件  将ls查看信息追加到文件末尾
+    cat 文件1 > 文件2 将文件1内容覆盖到文件2
+    echo"内容">> 文件  将打印信息追加到文件
+  # (16) head 显示文件头部内容
+    head 文件  查看文件头10行内容
+    head -n 5 文件 查看文件头5行内容
+  # (17) tail 显示文件尾部内容
+    tail 文件  默认10行
+    tail -n 5 文件
+    tail -f 实时追踪该文档的所有更新
+    比如：在一个窗口用tail -f 文件进入追踪
+          再开另一个窗口对文件进行写入，即可看到第一个窗口的变化
+  
+
+
 # 关机重启命令
 sync  将数据由内存同步到硬盘中
 halt  停机，关闭系统，但不断电
