--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -79,7 +79,89 @@
     比如：在一个窗口用tail -f 文件进入追踪
           再开另一个窗口对文件进行写入，即可看到第一个窗口的变化
   
+# 三、用户管理类
+  ## 用户命令
+  # (1)useradd 
+    useradd 用户名  （添加新用户）
+    useradd -g 组名 用户名 （添加新用户到某个组）
+    useradd -d 用户目录名称 用户名  （添加新用户同时修改该用户主目录名称）
+  # (2)passwd 
+    passwd 用户名  （设置用户密码）
+  # (3)id
+    id 用户名  (查看用户是否存在)
+  # (4)查看所有用户
+    cat /etc/passwd
+    awk -F':' '{ print $1}' /etc/passwd
+    getent passwd
+    compgen -u
+  # (5)su 切换用户
+    su 用户名  (切换用户，可能要输入密码)
+    exit  (su后使用返回上一个用户)
+  # (6)who 
+    who am i (查看当前用户，详细)
+    whoami  (查看当前用户，简单)
+  # (7)sudo  设置普通用户具有root权限
+    普通用户使用sudo需要root在sudoers文件中进行设置:
+    vim /etc/sudoers
+  # (8)userdel  删除用户(管理员root才能用)
+    userdel 用户名 (删除用户后，被删除用户的主目录不会跟着删除)
+    userdel -r 用户名  (删除用户并且删除用户主目录)
+  
+  ## 组命令 
+  # (1)groupadd  （新建一个组）
+  # (2)cat /etc/group  （查看已创建的组）
+  # (3)usermod -g 用户组 用户名  （修改用户所属的用户组）
+  # (4)groupmod -n 新组名 旧组名  （修改组的组名）
 
+# 四、文件权限类
+  # (1)ll查看当前目录下文件的读写执行权限
+  total 44
+  drwxr-xr-x  9 root    root    4096 8月  22 10:09 ./
+  drwxr-xr-x 36 trizhi2 trizhi2 4096 7月   4 17:34 ../
+  -rw-r--r--  1 root    root      13 8月  22 10:00 copyfile.log
+  -rwxrwxrwx  1 root    root     403 8月   8 10:14 copyfile.sh*
+  drwxr-xr-x  8 root    root    4096 8月  10 10:45 expatents/
+  drwxr-xr-x  5 root    root    4096 8月   9 11:37 oldproject/
+  drwxr-xr-x  9 root    root    4096 8月  22 14:41 patentinfer/
+  drwxr-xr-x  9 root    root    4096 7月  19 10:13 patent_show/
+  drwxr-xr-x  7 root    root    4096 8月  16 14:10 patout/
+  drwxr-xr-x  8 root    root    4096 8月  22 12:12 qiziartishow/
+  drwxr-xr-x  4 root    root    4096 7月  19 10:12 wjcatAdmin/
+  lrwxrwxrwx  1 root    root      20 8月  22 10:09 zsj -> /root/zsjproject/zsj
+  # -表示普通文件，d表示木,l表示链接，c表示字符设备文件(character),b表示块设备文件
+  （字符设备文件一般置于/dev目录下，一次传输一个字节的设备被称为字符设备，如键盘、字符终端等，传输数据的最小单位为一个字节。）
+  # 第一个rwx表示**属主权限**的读写执行权限，属主也叫创建者、所属用户
+  # 第二个rwx表示**属组权限**的读写执行权限，属组是当前文件属于的用户组的权限
+  # 第三个rwx表示**其他用户权限**的读写执行权限，除了文件创建者的权限
+  # 权限和用户中间的数字代表：硬链接个数（硬链接指向同一个文件的inode）
+  # 第一个用户root代表该文件/目录是由root用户创建的
+  # 第二个用户root代表该文件/目录所属用户的用户组为root
+
+  # (2)rwx作用文件和目录的不同解释
+  1、作用到文件
+    [r]代表可读read:可以读取，查看
+    [w]代表可写write:可以修改，但不代表可以删除该文件，删除一个文件的前提是对**该文件所在目录**有**写**权限，才能删除。
+    [x]代表可执行execute：可以被系统执行。
+  2、作用到目录
+    [r]代表可读read:ls能够查看目录内容
+    [w]代表可写write:可以修改，目录内创建+删除+重命名目录
+    [x]代表可执行execute：可以进入该目录，cd
+  # （3）chmod 改变文件权限 
+    第一种格式：
+    chmod [ugoa][+-=][rwx] 文件或目录
+    第二种格式：
+    chmod [mode=42] [文件或目录]
+    经验技巧:
+    u:所有者，g:所有组,o其他人，a:所有人(u/g/o的总和)
+    r=4,w=2,x=1，rwx=7
+    1-x
+    2-w
+    3-wx
+    4-r
+    5-rx
+    6-rw
+    7-rwx
+  
 
 # 关机重启命令
 sync  将数据由内存同步到硬盘中
