--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -161,7 +161,130 @@
     5-rx
     6-rw
     7-rwx
+    例如：
+    chmod 777 a.txt  (修改a.txt权限为rwxrwxrwx)
+    chmod -R 777 b/  (修改b目录下所有文件权限为rwxrwxrwx)
+  # (4)chown 改变文件所有者
+    chown[选项][最终用户][文件或目录]
+    选项: -R  递归操作
+    例如：
+    chown root a.txt  (修改a.txt的所有者为root)
+    chown -R root b/  (递归改变b目录下的文件所有者为root)
+    chown -R root:root b/  (递归改变b目录下文件的所有者和所有组)
+  # (5)chgrp 改变文件所属组
+    chgrp[用户组][文件或目录]
   
+# 五、搜索查找类
+  # (1)find 查找文件或目录
+    find[搜索范围][选项]
+    选项说明：
+    -name  按照指定的文件名查找
+    -user  查找属于指定用户名所有文件
+    -size  查找指定大小文件，单位为:b块(512字节),c字节,w字(2字节),k千字节，M兆字节，G吉字节
+    例如：
+    find /root/公共 -name test
+    find /root -name "*.cfg"  (查找/root目录下以.cfg结尾的文件)
+    find /home -user tony  (查找/home目录下tony用户创建的文件)
+    find /root -size +10M  (查找/root目录下大于等于10M的文件)
+ 
+  # (2)locate 快速定位文件路径
+    1、概念
+    locate指令利用事先建立的系统中所有文件名称及路径的locate数据库实现快速定位给定的文件。
+    locate指令无需遍历整个文件系统，查询速度快，为了保证查询结果的准确度，管理员必须定期更新locate时刻。（一般每天更新一次）
+    2、格式:
+    locate 搜索文件
+    3、使用技巧
+    第一次运行前，必须使用updatedb指令创建locate数据库。
+  # (3)which 命令  （查找命令位置）
+  # (4)whereis 命令  （标准查找命令位置）
+  # (5)grep 过滤查找及“|”管道符
+    1、语法
+    grep 选项 查找内容 源文件
+    2、选项书面
+    -n 显示匹配行及行号
+    3、例子：
+    ls |grep -n Yushuolin (查找文件在第几行)
+    grep -n 内容 源文件  (在文件查找内容并将匹配每一行加上行号显示出来)
+    ls | grep .txt  (ls查找目录下所有文件，再用grep过滤出以.txt结尾的文件)
+    grep -n boot a.txt | wc  (统计包含boot这个词的所有行的信息。三列结果，第一列代表有几行，第二列代表有boot的行的单词总数（不止统计了boot），第三列代表所有的字节大小)
+
+# 六、压缩解压类
+  # (1)gzip/gunzip 压缩
+  1、语法
+  gzip 文件  (压缩文件，只能将文件压缩成*.gz文件)
+  gunzip 文件.gz  (解压缩文件命令)
+  2、要点:
+    1.只能压缩文件不能压缩目录
+    2.不保留原来的文件
+    3.同时压缩多个文件会产生多个压缩包
+  # (2)zip/unzip
+  1、语法
+  zip[选项] xxx.zip  (压缩文件和目录)
+  unzip[选项] xxx.zip  (解压缩文件) 
+  2、选项说明
+    1.zip选项
+    -r  压缩目录
+    2.unzip 选项
+    -d<目录> 指定解压后文件的存放目录
+  3、技巧
+  zip 压缩命令在windows/linux通用，可以压缩目录且保留源文件
+  # tar 打包
+  1、语法
+  tar [选项] xxx.tar.gz 将要打包进去的内容  (打包目录，压缩后文件格式.tar.gz)
+  2、选项说明
+    -c  产生.tar打包文件
+    -v  显示详细信息
+    -f  指定压缩后的文件名称
+    -z  打包同时压缩
+    -x  解包.tar文件
+    -C  解压到指定目录
+  3、例子
+  tar -zxvf 压缩包名.tar.gz 压缩文件1 压缩文件2  (压缩多个文件，打包且压缩，显示详细信息，指定名称)
+  tar -zxvf 要解压包名.tar.gz -C 解压路径  (解压文件到指定路径)
+
+# 七、磁盘查看和分区类
+  # (1) du（disk usage，磁盘占用情况）
+    1、语法
+    du [选项] 目录/文件  (显示目录下每个子目录的磁盘使用情况)
+    2、选项说明
+    -h  以人们较易阅读的GBytes、MBytes、KBytes等格式自行显示
+    -a  不仅查看子目录大小，还要包括文件
+    -c  显示所有文件和子目录大小后，显示总和
+    -s  只显示总和
+    --max-depth=n  指定统计子目录的深度为第n层
+    例如：
+    du --max-depth=1 -ah  (查看当前目录下一层子目录及子文件的单独大小总和)
+  # (2)df(disk free，空余磁盘)
+    1、语法
+    df [选项]  (列出文件系统的整体磁盘使用量，检查文件系统的磁盘空间占用情况)
+    2、选项说明
+    -h  以人们较易阅读的GBytes、MBytes、KBytes等格式自行显示
+  # (3)free -h  查看当前物理内存和虚拟内存的占用情况
+  # (4)lsblk  查看快（block）设备的挂载情况
+    lsblk -f  查看详细的设备挂载情况，显示文件系统信息
+  **重点**
+  硬盘分为许多类型：
+  IDE：比较老，读写传输性能比较慢。在硬盘命名hda、hdb
+  SATA：数据存储容量更大，价格更低。在Linux中lsblk能看到sda、sdb
+  SCSI: 数据传输速度更快，性能更强。在Linux中lsblk能看到sda、sdb
+  **vda、vdb**虚拟化的模拟设备硬盘
+
+  # (5)mount/umount  挂载/卸载
+  1、概念
+  Linux中每个分区都是用来组成整个文件系统的一部分，整个文件系统包含一整套文件和目录，并将一个分区和一个目录联系起来，要载入的那个分区将使它的存储空间在这个目录下获得
+  2、语法
+  mount [-t 指定文件系统的类型，通常不必指定][-o 描述设备或档案的挂载方式] device(设备名) dir(挂载目录)
+  例子:
+  mount /dev/cdrom /mnt/cdrom/
+
+  # (6)fdisk  分区
+    fdisk -l  查看磁盘分区详情
+    fdist 硬盘设备名  
+    一个磁盘最多划分4个主分区，要继续划分，可以将最后一个分区当做扩展分区，再划分12个逻辑分区，也就是一个硬盘最多划分16个分区。
+  
+
+
+
 
 # 关机重启命令
 sync  将数据由内存同步到硬盘中
