--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -283,6 +283,24 @@
     一个磁盘最多划分4个主分区，要继续划分，可以将最后一个分区当做扩展分区，再划分12个逻辑分区，也就是一个硬盘最多划分16个分区。
   
 
+# 八、进程管理类
+  # (1)ps 查看当前系统进程状态
+    ps  只显示当前用户调用的以及当前终端控制台相关的进程
+    ps[选项]
+    选项含义:
+    a   列出带有终端的所有用户的进程
+    x   列出当前用户的所有进程，包括没有终端的进程
+    u   用户友好显示
+    -e  列出所有进
+    -u  列出某个用户关联的所有进
+    -f  显示完整格式的进程列表
+    例子：
+    ps aux|grep xxx  查看系统中所有进程（可以查看进程的CPU占用率）
+    ps -ef|grep xxx  查看子父进程之间的关系
+  **重点**
+  PID   子进程
+  PPID  父进程
+  ps能看到PID与PPID相邻，这代表子进程是由右边的父进程启动的
 
 
 
