--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -295,12 +295,52 @@
     -u  列出某个用户关联的所有进
     -f  显示完整格式的进程列表
     例子：
-    ps aux|grep xxx  查看系统中所有进程（可以查看进程的CPU占用率）
-    ps -ef|grep xxx  查看子父进程之间的关系
+    ps aux|grep xxx  查看系统中所有进程（可以查看进程的CPU及内存占用率）
+    ps -ef|grep xxx  查看子父进程之间的关系（可以查看该进程的父进程ID）
   **重点**
   PID   子进程
   PPID  父进程
   ps能看到PID与PPID相邻，这代表子进程是由右边的父进程启动的
+
+  # (2)kill 终止进程
+    kill[选项] 进程号   (通过进程号杀死进程)
+    killall 进程名称    (通过进程名称杀死进程，也支持通配符，在系统负载过大变得很慢时很有用)
+  **重点**
+  如果kill掉了sshd的守护进程，那么将无法通过xshell打开新的ssh链接。
+  想要重新启动sshd，可以用：start sshd
+
+  # (3)pstree   查看进程树
+  # (4)top  实时监控系统进程状态
+  1、语法
+  top [选项]
+  2、选项说明
+  -d 秒数  (指定top命令每隔几秒更新，默认是3秒)
+  -i       (不显示任何闲置或僵死进程)
+  -p       (通过指定进程ID来监控某个进程的状态)
+  3、操作说明
+  # (5)netstat  显示网络状态和端口占用信息
+  1、语法
+  netstat -anp | grep 进程号  (查看该进程网络信息)
+  netstat -nlp | grep 端口号  (查看网络端口号占用情况)
+  2、选项说明
+  -a  显示所有正在监听(listen)和未监听的套接字(socket)
+  -n  拒绝显示别名，能显示数字的全部转换为数字
+  -l  仅列出在监听的服务状态
+  -p  表示显示哪个进程在调用
+  3、例子：
+    通过进程号查看sshd进程的网络信息
+    netstat -anp | grep sshd
+  # (6)crontab 定时任务
+  1、语法
+  crontab[选项]
+  2、选项说明
+  -e  编辑定时任务
+  -l  查看定时任务
+  -r  删除当前用户所有的crontab任务
+  3、重新启动crond任务
+  crond有自己的守护进程
+  systemctl restart crond
+  4、
 
 
 
