--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -340,7 +340,10 @@
   3、重新启动crond任务
   crond有自己的守护进程
   systemctl restart crond
-  4、
+  4、crontab -l 说明
+    0 10 * * * sh /home/trizhi2/zhangshiju/copyfile.sh > /home/trizhi2/zhangshiju/copyfile.log
+    *  代表任何时间。五个“*”分别代表一个小时的第几分钟、一天当中的第几小时、一个月当中的第几天、一年当中的第几月、一周当中的星期几。
+    ， 代表不连续时间。比如0 8,
 
 
 
