--- a/算法/段落算法.md
+++ b/算法/段落算法.md
@@ -3,19 +3,19 @@ titles = []
 contents = []
 values = []
 pricemap = {'1': 0, '2': 35, '3': 50, '4': 70}
-des = {'1': '²»ºÏ¸ñ', '2': '¿´²»Ì«¶®', '3': 'Ë¼Â·ÇåÎú', '4': 'ÓĞ´´ÔìĞÔ'}
+des = {'1': 'ä¸åˆæ ¼', '2': 'çœ‹ä¸å¤ªæ‡‚', '3': 'æ€è·¯æ¸…æ™°', '4': 'æœ‰åˆ›é€ æ€§'}
 statistics = []
-total = 0  # ×ÜÆÀ¹ÀµÃ·Ö
-effectcount = 0  # ·ûºÏÖ÷idÓë×ÓidÎÄ±¾³¤¶ÈÖ®ºÍ´óÓÚ300µÄ²½Öè¸öÊı
-allcount = 0  # Ö÷id¶ÎÂäÊıÁ¿
-stepcount = 0  # Ã¿¸öÖ÷id¶ÎÂä¼°Æä×Óid¶ÎÂäµÄÎÄ±¾³¤¶È
+total = 0  # æ€»è¯„ä¼°å¾—åˆ†
+effectcount = 0  # ç¬¦åˆä¸»idä¸å­idæ–‡æœ¬é•¿åº¦ä¹‹å’Œå¤§äº300çš„æ­¥éª¤ä¸ªæ•°
+allcount = 0  # ä¸»idæ®µè½æ•°é‡
+stepcount = 0  # æ¯ä¸ªä¸»idæ®µè½åŠå…¶å­idæ®µè½çš„æ–‡æœ¬é•¿åº¦
 for i, v in enumerate(titles):
-    # type1:µ±Ç°idÎªÖ÷id£¬ÏÂÒ»¸öidÒ²ÎªÖ÷id
-    # type2:µ±Ç°idÎªÖ÷id£¬ÏÂÒ»¸öidÎª×Óid
-    # type3:µ±Ç°idÎª×Óid£¬ÏÂÒ»¸öidÎªÖ÷id
-    # type3:µ±Ç°idÎª×Óid£¬ÏÂÒ»¸öidÎªÖ÷id
-    # type4:µ±Ç°idÎª×Óid£¬ÏÂÒ»¸öidÎª×Óid
-    # type5:Ã»ÓĞÏÂÒ»¸öid
+    # type1:å½“å‰idä¸ºä¸»idï¼Œä¸‹ä¸€ä¸ªidä¹Ÿä¸ºä¸»id
+    # type2:å½“å‰idä¸ºä¸»idï¼Œä¸‹ä¸€ä¸ªidä¸ºå­id
+    # type3:å½“å‰idä¸ºå­idï¼Œä¸‹ä¸€ä¸ªidä¸ºä¸»id
+    # type3:å½“å‰idä¸ºå­idï¼Œä¸‹ä¸€ä¸ªidä¸ºä¸»id
+    # type4:å½“å‰idä¸ºå­idï¼Œä¸‹ä¸€ä¸ªidä¸ºå­id
+    # type5:æ²¡æœ‰ä¸‹ä¸€ä¸ªid
     ifrun = 'type1'
 
     c = contents[i]
@@ -31,7 +31,7 @@ for i, v in enumerate(titles):
     id = ids[i + 2]
     countthis = len(id.split('-'))
     try:
-        # ÅĞ¶ÏÏÂÒ»¸öidÊÇ²»ÊÇ×Óid
+        # åˆ¤æ–­ä¸‹ä¸€ä¸ªidæ˜¯ä¸æ˜¯å­id
         nextid = ids[i + 3]
         countnext = len(nextid.split('-'))
         if countthis < 2 and countnext < 2:  # type1
@@ -51,11 +51,11 @@ for i, v in enumerate(titles):
             ifrun = 'type4'
             allcount += 1
             stepcount += thisstepword
-    except:  # Èç¹ûÃ»ÓĞÏÂÒ»¸öid
+    except:  # å¦‚æœæ²¡æœ‰ä¸‹ä¸€ä¸ªid
         ifrun = 'type5'
         allcount += 1
 
-    # Èç¹ûÃ»ÓĞÏÂÒ»¸ö×Óid£¬¿ªÊ¼Í³¼Æ¸ÃÖ÷id¼°Æä×Óid¶ÔÓ¦ÎÄ±¾³¤¶ÈÊÇ·ñ³¬¹ı300
+    # å¦‚æœæ²¡æœ‰ä¸‹ä¸€ä¸ªå­idï¼Œå¼€å§‹ç»Ÿè®¡è¯¥ä¸»idåŠå…¶å­idå¯¹åº”æ–‡æœ¬é•¿åº¦æ˜¯å¦è¶…è¿‡300
     print(ifrun)
     if ifrun == 'type1' or ifrun == 'type5':
         print('1')
@@ -66,15 +66,15 @@ for i, v in enumerate(titles):
         else:
             thisprice = 0
         constatis = {
-            'title': '²½Öè' + str(id) + '£¬' + v + '\n',
-            'result': '×ÖÊı:' + str(thisstepword) + '£¬ÉóºË½á¹û:' + str(d) + '£¬µÃ·Ö:' + str(thisprice) + '·Ö' + '\n\n',
+            'title': 'æ­¥éª¤' + str(id) + 'ï¼Œ' + v + '\n',
+            'result': 'å­—æ•°:' + str(thisstepword) + 'ï¼Œå®¡æ ¸ç»“æœ:' + str(d) + 'ï¼Œå¾—åˆ†:' + str(thisprice) + 'åˆ†' + '\n\n',
             'price': thisprice
         }
     elif ifrun == 'type2' or ifrun == 'type4':
         print('2')
         constatis = {
-            'title': '²½Öè' + str(id) + '£¬' + v + '\n',
-            'result': '×ÖÊı:' + str(thisstepword) + '£¬ÉóºË½á¹û:' + str(d) + '\n',
+            'title': 'æ­¥éª¤' + str(id) + 'ï¼Œ' + v + '\n',
+            'result': 'å­—æ•°:' + str(thisstepword) + 'ï¼Œå®¡æ ¸ç»“æœ:' + str(d) + '\n',
             'price': 0
         }
     elif ifrun == 'type3':
@@ -87,9 +87,9 @@ for i, v in enumerate(titles):
         elif stepcount < 100:
             stepcountnum = 0
         constatis = {
-            'title': '²½Öè' + str(id) + '£¬' + v + '\n',
-            'result': '×ÖÊı:' + str(thisstepword) + '£¬ÉóºË½á¹û:' + str(d) + '\n'
-                      + '¸Ã´ó²½ÖèµÄ×Ü×ÖÊı:' + str(stepcount) + '£¬µÃ·Ö£º' + str(stepcountnum) + '·Ö' + '\n\n',
+            'title': 'æ­¥éª¤' + str(id) + 'ï¼Œ' + v + '\n',
+            'result': 'å­—æ•°:' + str(thisstepword) + 'ï¼Œå®¡æ ¸ç»“æœ:' + str(d) + '\n'
+                      + 'è¯¥å¤§æ­¥éª¤çš„æ€»å­—æ•°:' + str(stepcount) + 'ï¼Œå¾—åˆ†ï¼š' + str(stepcountnum) + 'åˆ†' + '\n\n',
             'price': stepcountnum
         }
     print('________________')
@@ -114,15 +114,15 @@ def valueevaluation(request):
         if len(ADdraft) > 0:
             aid = list(ADdraft)[-1].id
     except:
-        print('¹ÜÀíÔ±±íÕÒ²»µ½')
+        print('ç®¡ç†å‘˜è¡¨æ‰¾ä¸åˆ°')
     try:
         SDread = SubmitDraft.objects.filter(title=title, content__iregex=par1)
         print(SDread)
         if len(SDread) > 0:
             sid = list(SDread)[-1].uid
     except:
-        print('ÓÃ»§±íÕÒ²»µ½')
-    print('×îÖÕid', aid, sid)
+        print('ç”¨æˆ·è¡¨æ‰¾ä¸åˆ°')
+    print('æœ€ç»ˆid', aid, sid)
 
     reportpath, file_name = pricecalcul(titles, contents, jishubejing, youyixiaoguo, ids, username, values, title)
     thisdraftpath = reportpath.replace('\\', '/')
@@ -136,4 +136,4 @@ def valueevaluation(request):
         except:
             pass
 
-    return responseJson(200, url, '¼ÛÖµ±¨¸æÉú³É³É¹¦')
+    return responseJson(200, url, 'ä»·å€¼æŠ¥å‘Šç”ŸæˆæˆåŠŸ')
