--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -346,6 +346,18 @@
     ， 代表不连续时间。比如0 8,
 
 
+# 九、软件包管理类
+  # (1)RPM
+  1、概念
+  RPM(RedHat Package Manager), RedHat软件包管理工具，类似window里的setup.exe,是Linux系统里面的打包安装工具。需要注意的是，ubuntu用的是apt软件包管理工具，不是rpm。
+  2、语法
+  rpm -qa  (查询所安装的所有rpm软件包)
+  rpm -qi 软件包  (查询展示详细信息)
+  rpm -qa | grep firefox  (查看火狐相关的rpm软件包)
+  rpm -e 软件包  (卸载软件包)
+  rpm -e --nodeps 软件包  (卸载软件时，不检查依赖，可能会导致软件缺少该包无法运行)
+  rpm -ivh RPM 包全名  (i安装，v显示详细信息，h进度条)
+
 
 # 关机重启命令
 sync  将数据由内存同步到硬盘中
