--- a/Web/Nginx+Uwsgi/CentOS/命令.md
+++ b/Web/Nginx+Uwsgi/CentOS/命令.md
@@ -358,6 +358,34 @@
   rpm -e --nodeps 软件包  (卸载软件时，不检查依赖，可能会导致软件缺少该包无法运行)
   rpm -ivh RPM 包全名  (i安装，v显示详细信息，h进度条)
 
+  # (1)yum
+  1、概念
+  YUM全称(Yellow dog Updater, Modified),是一个在Fedora、RedHat及CentOS中的Shell前端软件包管理器，能够从指定服务器自动下载RPM软件包并且安装，可以**自动处理依赖性关系**，并且一次性安装所有依赖的软件包。
+  2、语法
+  yum[选项][参数]
+  3、选项说明
+  -y  对所有提问都回答yes
+  4、参数说明
+  install  安装rpm软件包
+  update   更新rpm软件包
+  check-update  检查是否有可用更新的软件包
+  remove   删除指定的rpm软件包
+  list  显示软件包信息
+  clean  清理yum过期的缓存
+  deplist  显示yum软件包的所有依赖关系
+  5、例子
+  1.安装火狐
+  yum -y install firefox
+  2.查看已安装的火狐
+  yum list | grep firefox
+  3.卸载火狐
+  yum remove firefox
+  4、安装wget
+  注意：yum在安装时会自动寻找最近的镜像源，因此即使配置里写的是外网源，下载也会比较快
+  yum install wget
+  注意：wget 可以自己指定镜像源，例如:
+  wget http://mirrors.aliyun.com/repo/Centos-7.repo  //阿里云
+
 
 # 关机重启命令
 sync  将数据由内存同步到硬盘中
