--- a/Web/Nginx+Uwsgi/CentOS/基础.md
+++ b/Web/Nginx+Uwsgi/CentOS/基础.md
@@ -1,4 +1,4 @@
-一、分区和挂载点
+# 一、分区和挂载点
 Linux是先有目录，再将物理地址映射到目录中，应该叫“挂载”
 Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
 1、引导分区（boot）：
@@ -10,7 +10,7 @@ Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
 3、根分区（/）
   在Linux操作系统中，除/boot目录外的其它所有目录都对应于该分区.因此，用户可通过访问除/boot目录外的其它所有目录来访问该分区。
 
-二、根分区下不同目录的默认定义与作用。
+# 二、根分区下不同目录的默认定义与作用。
 1、bin
    bin 是 Binaries (二进制文件，可以执行的机器码) 的缩写, 这个目录存放着可以直接执行的命令,例如：ls、cd等
    在Centos7中，bin文件夹图标会有一个朝下的箭头，这说明该bin文件夹实际不是放在根目录下的，右键bin文件夹查看属性，可能看到bin的链接目标显示：usr/bin，说明实际指向的是usr下面的bin。
@@ -32,3 +32,36 @@ Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
    该目录为系统管理员，也称作超级权限者的用户主目录。
 10、opt
    opt 是 optional(可选) 的缩写，这是给主机额外安装软件所摆放的目录。比如你安装一个ORACLE数据库则就可以放到这个目录下。默认是空的。
+
+
+# 三、变量
+全局变量:不论是父bash还是子bash都能调用
+局部变量:只针对当前bash的变量，在子bash中创建的不能被父bash调用的变量，反之亦然
+# (1) 系统预定义变量
+  1、常用系统变量
+  $HOME、$PWD、$SHELL、$USER等
+  2、实例
+    1. 查看系统变量
+    echo $HOME
+    2.显示当前Shell中所有变量
+    set
+# (2)自定义变量
+  1、语法
+  变量名=变量值(不能有空格，有空格等于到bin目录找命令)
+  如果值中必须有空格，可以用引号，例如
+  a='hello world'
+  2、在子bash定义全局变量
+  先定义一个变量，在用export升级为全局变量
+  a=1
+  export a
+
+
+# (3)查看环境变量
+  env | less
+  printenv 变量名(不用$)
+  echo $变量名
+  ls $变量名
+
+
+
+
