--- a/Web/Nginx+Uwsgi/CentOS/基础.md
+++ b/Web/Nginx+Uwsgi/CentOS/基础.md
@@ -45,6 +45,7 @@ Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
     echo $HOME
     2.显示当前Shell中所有变量
     set
+    set | less
 # (2)自定义变量
   1、语法
   变量名=变量值(不能有空格，有空格等于到bin目录找命令)
@@ -54,14 +55,38 @@ Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
   先定义一个变量，在用export升级为全局变量
   a=1
   export a
-
-
-# (3)查看环境变量
+# (3)变量之间的加减
+  a=$((1+5))
+  a=$[1+5] 
+# (4)撤销变量
+  unset 变量名
+# (5)查看环境变量
   env | less
   printenv 变量名(不用$)
   echo $变量名
   ls $变量名
+# (6)声明静态变量
+  readonly 变量  (不能unset)
+# (7)变量定义规则
+  1、变量名称可以由数字字母下划线组成，不能以数字开头，环境变量名建议大写
+  2、等号两侧不能有空格
+  3、在bash中，变量的默认类型都是字符串类型，无法直接进行数值运算
+  4、变量的值如果有空格，需要使用单引号或双引号括起来
 
-
+# (8)特殊变量
+  # 1、$n  
+  n为数字，$0代表该脚本的名称，$1-9代表第一到第九个参数，十以上的参数要用大括号包含:${10}
+  **可以用于调用脚本的时候传入参数**
+  例如.sh文件中写入:
+  #! /bin/bash
+  echo $"hello, $1"
+  调用sh时这样写:
+  ./hello.sh world
+  会输出:
+  hello world  这代表world作为第一个参数传入到sh运行
+  # 2、$#
+  获取所有输入参数的个数(常用于循环，判断参数个数是否正确及加强脚本健壮性)
+  # 3、$*
+  
 
 
