--- a/Web/Nginx+Uwsgi/CentOS/基础.md
+++ b/Web/Nginx+Uwsgi/CentOS/基础.md
@@ -87,6 +87,138 @@ Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
   # 2、$#
   获取所有输入参数的个数(常用于循环，判断参数个数是否正确及加强脚本健壮性)
   # 3、$*
+  命令行中的所有参数，且把所有参数看成一个整体
+  # 4、$@
+  命令行中的所有参数，把每个参数区分对待
+  # 5、$?
+  最后一次执行命令返回的状态，如果这个变量值为0，证明上个命令执行正确；非0说明上个命令执行不正确
+  # 6、运算符
+  $((运算式)) 或 $[运算式]
+  expr 1 + 2  (expr是表达式意思)
+
+# 四、条件判断
+  # (1)基本语法
+    test condition
+    [ condition ]  (条件非空返回true，例如[ aaa ]返回True，[  ]返回False)
+  # (2)常用判断条件
+    1.整数之间的比较
+    -eq 等于(equal)         -ne 不等于(not equal)
+    -lt 小于(less than)     -le 小于等于(less equal)
+    -gt 大于(greater than)  -ge 大于等于(greater equal)
+    注意: 如果是字符串之间的判断，用等号"="判断相等，"!="判断不等
+    2.按文件权限比较
+    -r/w/x 文件有读/写/执行的权限
+    例如: [ -r hello.sh ]
+    判断hello.sh是否有可读权限
+    3.按照文件的类型判断
+    -e  文件存在
+    -f  文件存在并且是一个常规的文件(file)
+    -d  文件存在并且是一个目录(diretory)
+    4.多条件判断
+    [ condition ] && echo OK || echo notOK
+    &&表示前一条命令执行成功时，才执行后一条命令，||表示上一条命令执行失败后，才执行下一条命令。(类似三元运算符)
+     
+# 五、流程判断
+  # (1)基本语法
+  #   1、单分支
+      if [条件判断式];then
+         程序
+      fi
+      或者
+      if [条件判断式]
+      then
+        程序
+      fi
+  #   2、多分支
+      if [条件判断式]
+      then
+        程序
+      elif [条件判断式]
+      then
+        程序
+      else
+        程序
+      fi
+  #   3、case
+      case $变量名 in
+      "值1")
+          如果变量的值等于值1，则执行程序1
+      ;;
+      "值2")
+          如果变量的值等于值2，则执行程序2
+      ;;
+      ...
+      *)
+          如果变量的值都不是以上的值，则执行此程序
+      ;;
+      esac
+      注意：case行尾必须为单词in，每一个模式匹配必须以右括号“)”结束
+           双分号;;表示命令序列结束，相当于java中的break
+           最后的*)表示默认模式，相当于java中的default
+  #   4、for
+      1.语法
+      for (( 初始值;循环控制条件;变量变化 ))
+      do
+          程序
+      done
+      或者：
+      for 变量 in 值1 值2 值3...
+      do
+          程序
+      done
+  #   5、while
+      while [条件判断式]
+      do
+          程序
+      done
+
+  # (2)实例
+    1、防止报错
+    if [ $1=abc ]
+    then
+        echo hello
+    fi
+    如果直接运行.sh会报错，因为$1会缺少参数，这时可以改成
+    if [ "$1"x = "abc"x ]
+    then
+        echo hello
+    fi
+    保证至少有一个参数
+    2、逻辑与加入条件表达式
+    if [ $a -gt 18 ] && [ $a -lt 35 ]; then echo OK; fi
+    或者(-a是and的意思)
+    if [ $a -gt 18 -a $a -lt 35 ]; then echo OK; fi
+    3、用for循环从1加到100
+    形式一:
+    #! /bin/bash
+
+    sum=0
+    for((i=0;i<100;i++))
+    do
+        sum=$[$sum+$i]
+    done
+    echo $sum
+    形式二:
+    for i in {1..100}; do sum=$[$sum+$i]; done; echo $sum
+    4、用while实现
+    a=1
+    while [ $a -le 2 ]
+    do
+        # sum2=$[ $sum2 + $a ]
+        # a=$[$a+1]
+        # 用let能够使用高级编程语法
+        let sum2+=a
+        let a++
+    done
+    echo $sum2
+
+# 六、read读取控制台输入
+  read (选项) (参数)
+  选项:
+  -p  指定读取时的提示符
+  -t  指定读取时等待的时间(秒),不过不加-t表示一直等待
+  参数:
+  变量: 指定读取值的变量名
+  实例：
+  提示7秒内，读取控制台输入的名称
   
-
-
