--- a/Web/Nginx+Uwsgi/CentOS/基础.md
+++ b/Web/Nginx+Uwsgi/CentOS/基础.md
@@ -221,4 +221,38 @@ Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
   变量: 指定读取值的变量名
   实例：
   提示7秒内，读取控制台输入的名称
-  
+
+
+# 七、函数
+  # (1)系统函数
+  1、basename
+    basename [string/pathname][suffix] (basename命令会删除所有前缀包括最后一个"/"字符，然后将字符串显示出来)
+    例如:
+    basename /home/root/a.txt
+    输出: a.txt
+    即:获取路径中的文件名
+    如果是: basename /home/root/a.txt .txt
+    还会去掉后缀即： a
+  2、dirname
+  获取文件的绝对路径
+  dirname /home/root/a.txt
+  输出: /home/root
+  # (2)自定义函数
+  1、基本语法
+  [function] funname[()]
+  {
+    Action;
+    [return int;]
+  }
+  注意: [funtion]、()、return可以省略
+        调用函数之前必须要声明，shell脚本语言是逐行运行的，不会先编译
+        函数返回值，只能通过$?系统变量，可以显示加: return 返回，如果不加，将以最后一条命令运行结果，作为返回值。
+        return后跟数值n(0-255)
+  2、例子
+  fuction add(){
+    $s=$[$1+$2]
+    echo $s
+  }
+  read -p "请输入第一个整数: " a
+  read -p "请输入第一个整数: " b
+  add $a $b
