--- a/Web/Nginx+Uwsgi/CentOS/基础.md
+++ b/Web/Nginx+Uwsgi/CentOS/基础.md
@@ -255,4 +255,5 @@ Linux会对磁盘（硬盘）进行分区，一般分为3个分区：
   }
   read -p "请输入第一个整数: " a
   read -p "请输入第一个整数: " b
-  add $a $b
+  sum=$(add $a $b)
+  echo "和:"$?
