--- a/Python/base/reknow/正则笔记.md
+++ b/Python/base/reknow/正则笔记.md
@@ -12,76 +12,76 @@ line_split = [line.strip() for line in line_split if line.strip() not in ['。',
 p1 = re.compile('^[1-9a-z_-]{3,15}$')
 
 # 三、/g全局搜索，/i忽略大小写
-# /The/gi 表示在全局搜索 The，在后面的 i 将其条件修改为忽略大小写，即搜索the和The，g表示全局搜索
+ /The/gi 表示在全局搜索 The，在后面的 i 将其条件修改为忽略大小写，即搜索the和The，g表示全局搜索
 
 # 四、多行修饰符m
-# /at(.)?$/gm 表示小写字符 a 后跟小写字符 t ，末尾可选除换行符外任意字符
+ /at(.)?$/gm 表示小写字符 a 后跟小写字符 t ，末尾可选除换行符外任意字符
 
 # 五、正则表达式默认采用贪婪匹配模式，在该模式下意味着会匹配尽可能长的子串。我们可以使用 ? 将贪婪匹配模式转化为惰性匹配模式。
-# 如："/(.*?at)/" => （The fat） cat sat on the mat. 匹配到第一个以at为结尾的字符串停止，即The fat,否则贪婪会匹配整个字符串
+ 如："/(.*?at)/" => （The fat） cat sat on the mat. 匹配到第一个以at为结尾的字符串停止，即The fat,否则贪婪会匹配整个字符串
 
 # 六、提取括号()中的内容
-# r'[(](.*?)[)]'
+ r'[(](.*?)[)]'
 
 # 七、正则表达式与变量的拼接
 # (1)r"Exp"+Var+r"Exp",Exp:表达式,Var:变量
-# key="abcd"
-# print(re.compile(r"ww\b"+key+r"\bmm"))
-# (2)r"Exp%sExp"%Var,Exp:表达式,Var:变量,%s:为变量（Var）插入的位置,%:后面跟插入的变量（Var）
-# key="abcd"
-# print(re.compile(r"mm\b%s\bmm"%key))
+ key="abcd"
+ print(re.compile(r"ww\b"+key+r"\bmm"))
+#  (2)r"Exp%sExp"%Var,Exp:表达式,Var:变量,%s:为变量（Var）插入的位置,%:后面跟插入的变量（Var）
+ key="abcd"
+ print(re.compile(r"mm\b%s\bmm"%key))
 
-# 删除提及。x = re.sub("@\S+", " ", x)
-# 删除。 URL 链接。x = re.sub("https*\S+", " ", x)
-# 删除标签。x = re.sub("#\S+", " ", x)
-# 删除记号和下一个字符。x = re.sub("\'\w+", '', x)
-# 删除标点符号。x = re.sub('[%s]' % re.escape(string.punctuation), ' ', x)
-# 删除数字。x = re.sub(r'\w*\d+\w*', '', x)
-# 替换空格。x = re.sub('\s{2,}', " ", x)
+ 删除提及。x = re.sub("@\S+", " ", x)
+ 删除。 URL 链接。x = re.sub("https*\S+", " ", x)
+ 删除标签。x = re.sub("#\S+", " ", x)
+ 删除记号和下一个字符。x = re.sub("\'\w+", '', x)
+ 删除标点符号。x = re.sub('[%s]' % re.escape(string.punctuation), ' ', x)
+ 删除数字。x = re.sub(r'\w*\d+\w*', '', x)
+ 替换空格。x = re.sub('\s{2,}', " ", x)
 
 # 去掉半角括号的内容
-# a = re.sub(u"\\(.*?\\)|\\{.*?}|\\[.*?]", "", s)
+ a = re.sub(u"\\(.*?\\)|\\{.*?}|\\[.*?]", "", s)
 
 # 校验密码强度，不能特殊字符，长度限定8-10
-# ^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{8,10}$
+ ^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{8,10}$
 # 校验中文
-# ^[\\u4e00-\\u9fa5]{0,}$
+ ^[\\u4e00-\\u9fa5]{0,}$
 # 由数字、26个英文字母或下划线组成的字符串
-# ^\\w+$
+ ^\\w+$
 # 校验E-Mail 地址
-# email_pattern = '^[*#\u4e00-\u9fa5 a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*\.[a-zA-Z0-9]{2,6}$'
-# [\\w!#$%&'*+/=?^_`{|}~-]+(?:\\.[\\w!#$%&'*+/=?^_`{|}~-]+)*@(?:[\\w](?:[\\w-]*[\\w])?\\.)+[\\w](?:[\\w-]*[\\w])?
+ email_pattern = '^[*#\u4e00-\u9fa5 a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*\.[a-zA-Z0-9]{2,6}$'
+ [\\w!#$%&'*+/=?^_`{|}~-]+(?:\\.[\\w!#$%&'*+/=?^_`{|}~-]+)*@(?:[\\w](?:[\\w-]*[\\w])?\\.)+[\\w](?:[\\w-]*[\\w])?
 # 校验身份证号码
 # 15位：
-# ^[1-9]\\d{7}((0\\d)|(1[0-2]))(([0|1|2]\\d)|3[0-1])\\d{3}$
+ ^[1-9]\\d{7}((0\\d)|(1[0-2]))(([0|1|2]\\d)|3[0-1])\\d{3}$
 # 18位：
-# ^[1-9]\\d{5}[1-9]\\d{3}((0\\d)|(1[0-2]))(([0|1|2]\\d)|3[0-1])\\d{3}([0-9]|X)$
-# “yyyy-mm-dd“ 格式的日期校验，已考虑平闰年。
-# ^(?:(?!0000)[0-9]{4}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[0-9]{2}(?:0[48]|[2468][048]|[13579][26])|(?:0[48]|[2468][048]|[13579][26])00)-02-29)$
+ ^[1-9]\\d{5}[1-9]\\d{3}((0\\d)|(1[0-2]))(([0|1|2]\\d)|3[0-1])\\d{3}([0-9]|X)$
+ “yyyy-mm-dd“ 格式的日期校验，已考虑平闰年。
+ ^(?:(?!0000)[0-9]{4}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[0-9]{2}(?:0[48]|[2468][048]|[13579][26])|(?:0[48]|[2468][048]|[13579][26])00)-02-29)$
 # 校验金额，精确到2位小数。
-# ^[0-9]+(.[0-9]{2})?$
+ ^[0-9]+(.[0-9]{2})?$
 # 判断IE的版本
-# ^.*MSIE [5-8](?:\\.[0-9]+)?(?!.*Trident\\/[5-9]\\.0).*$
+ ^.*MSIE [5-8](?:\\.[0-9]+)?(?!.*Trident\\/[5-9]\\.0).*$
 # 校验IP-v4地址
-# \\b(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\b
+ \\b(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\b
 # 校验IP-v6地址
-# (([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:)|fe80:(:[0-9a-fA-F]{0,4}){0,4}%[0-9a-zA-Z]{1,}|::(ffff(:0{1,4}){0,1}:){0,1}((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])|([0-9a-fA-F]{1,4}:){1,4}:((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9]))
+ (([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:)|fe80:(:[0-9a-fA-F]{0,4}){0,4}%[0-9a-zA-Z]{1,}|::(ffff(:0{1,4}){0,1}:){0,1}((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])|([0-9a-fA-F]{1,4}:){1,4}:((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9]))
 # 提取URL链接
-# ^(f|ht){1}(tp|tps):\\/\\/([\\w-]+\\.)+[\\w-]+(\\/[\\w- ./?%&=]*)?
+ ^(f|ht){1}(tp|tps):\\/\\/([\\w-]+\\.)+[\\w-]+(\\/[\\w- ./?%&=]*)?
 # 文件路径及扩展名校验，以txt为例
-# ^([a-zA-Z]\\:|\\\\)\\\\([^\\\\]+\\\\)*[^\\/:*?"<>|]+\\.txt(l)?$
+ ^([a-zA-Z]\\:|\\\\)\\\\([^\\\\]+\\\\)*[^\\/:*?"<>|]+\\.txt(l)?$
 # 提取Color Hex Codes（网页中的颜色代码）
-# ^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$
+ ^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$
 # 提取网页图片
-# \\< *[img][^\\\\>]*[src] *= *[\\"\\']{0,1}([^\\"\\'\\ >]*)
+ \\< *[img][^\\\\>]*[src] *= *[\\"\\']{0,1}([^\\"\\'\\ >]*)
 # 提取页面超链接
-# (<a\\s*(?!.*\\brel=)[^>]*)(href="https?:\\/\\/)((?!(?:(?:www\\.)?'.implode('|(?:www\\.)?', $follow_list).'))[^"]+)"((?!.*\\brel=)[^>]*)(?:[^>]*)>
+ (<a\\s*(?!.*\\brel=)[^>]*)(href="https?:\\/\\/)((?!(?:(?:www\\.)?'.implode('|(?:www\\.)?', $follow_list).'))[^"]+)"((?!.*\\brel=)[^>]*)(?:[^>]*)>
 # 查找CSS属性
-# ^\\s*[a-zA-Z\\-]+\\s*[:]{1}\\s[a-zA-Z0-9\\s.#]+[;]{1}
+ ^\\s*[a-zA-Z\\-]+\\s*[:]{1}\\s[a-zA-Z0-9\\s.#]+[;]{1}
 # 抽取注释
-# <!--(.*?)-->
+ <!--(.*?)-->
 # 匹配HTML标签
-# <\\/?\\w+((\\s+\\w+(\\s*=\\s*(?:".*?"|'.*?'|[\\^'">\\s]+))?)+\\s*|\\s*)\\/?>
+ <\\/?\\w+((\\s+\\w+(\\s*=\\s*(?:".*?"|'.*?'|[\\^'">\\s]+))?)+\\s*|\\s*)\\/?>
 
 
 
