--- a/Python/base/reknow/高级用法.md
+++ b/Python/base/reknow/高级用法.md
@@ -56,3 +56,13 @@ print(res.groupdict())
 for w in content:
     if w >= u'\u4e00' and w <= u'\u9fa5':
         s += w
+
+
+# 判断url是否正确
+regex = re.compile(
+        r'^(?:http|ftp)s?://'  # http:// or https://
+        r'(?:(?:[A-Z0-9](?:[A-Z0-9-]{0,61}[A-Z0-9])?\.)+(?:[A-Z]{2,6}\.?|[A-Z0-9-]{2,}\.?)|'  # domain...
+        r'localhost|'  # localhost...
+        r'\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})'  # ...or ip
+        r'(?::\d+)?'  # optional port
+        r'(?:/?|[/?]\S+)$', re.IGNORECASE)
