--- a/Python/二级/考点.md
+++ b/Python/二级/考点.md
@@ -5,3 +5,8 @@
 2、解释:将源代码逐条转换成目标代码同时逐条运行目标代码的过程，执行解释的计算机程序称为“解释器”。
         高级语言代码与数据一同输入解释器，然后输出运行结果。解释每次程序运行都需要解释器和源代码。
         
+二、print的用法
+1.print对于字符串，会去掉两边的引号，对于其他类型，则会直接输出
+2.print输出字符串表示时，字符串统一用单引号表示，如果之前是双引号，会被替换成单引号
+3.可以用字符串模板(占位符)的形式输出字符串: print("{}插入第一个".format("被插入的字符串或变量"))
+
