--- a/Python/二级/考点.md
+++ b/Python/二级/考点.md
@@ -10,3 +10,17 @@
 2.print输出字符串表示时，字符串统一用单引号表示，如果之前是双引号，会被替换成单引号
 3.可以用字符串模板(占位符)的形式输出字符串: print("{}插入第一个".format("被插入的字符串或变量"))
 
+三、format
+1.设置插入字符串长度
+'{0:25}'.format("等级考试")
+若显示宽度小于实际宽度，以实际宽度为准
+2.设置居中
+'{0:^25}'
+3.设置居中填充
+'{0:*^25}'
+4.设置左  右对齐
+'{0:*>25}'
+5.浮点数设置精度
+'{0:.2f}'.format(123.45678)
+6.设置字符串保留个数
+'{0:.3}'.format('等级考试')
