--- a/Python/二级/选择题.md
+++ b/Python/二级/选择题.md
@@ -8,3 +8,52 @@ d.x=(y=3)
   7从左边索引0开始数，属于第八位，即想
   -3从右边-1开始数，**不包括第三位**,即去不算
   总结:切片先找到两个数字对应的字符，然后包括左边，不包括右边
+
+3.复数的虚部后缀j可以大写，也可以小写
+
+4.x=(y=z+1)，错误，赋值语句不能再次赋给变量，赋值语句右边必须是表达
+
+5.以下选项符合Python语法要求且能够正确执行的是：
+a.min = x if x<y=y  错，没有else,且if判断条件不符合规则
+b.max = x>y?x:y   错，python没有?三元运算符写法
+c.if (x>y) print x  错，if后面少了:
+d.while True: pass   对，空语句但符合语法 
+
+6.对负数取平方根，例如:pow(-1,0,5),将产生**虚数**
+
+7.for或者while与else搭配使用时，能够执行else对应语句块的情况是：
+  仅循环正常结束时
+
+8.关于break作用，正确的是：
+  跳出当前层for/while循环
+
+9.以下说法错误的是：
+a.函数定义不一定放在调用之前
+b.当前代码中有main函数时，程序将从main开始执行。(错)
+c.可以在函数中定义函数
+d.语句a=func()中，func函数可以没有返回值
+
+10.给出以下代码，程序运行结果是:
+s = 'an apple a day'
+def split(s):
+    return s.split('a')
+print(s.split())
+
+a. ['', 'n', 'pple', 'y]
+b. ['an', 'apple', 'a', 'day']
+c.在函数定义时报错
+d.在最后一行报错
+答案:b，s.split()调用的是原生split()，以空格为分隔符
+
+11.
+def func(lst=[]):
+  lst.append(1)
+  retrun lst
+
+a=func()
+b=func()
+print(a,b)
+
+12.任何空的，包括空字符串/字典/数组/元组的布尔值都是False
+
+13.列表中的pop功能是:返回并删除列表中最后一个元素
