--- a/Python/二级/选择题.md
+++ b/Python/二级/选择题.md
@@ -57,3 +57,18 @@ print(a,b)
 12.任何空的，包括空字符串/字典/数组/元组的布尔值都是False
 
 13.列表中的pop功能是:返回并删除列表中最后一个元素
+
+14.以下代码运行结果是:
+t = input('请输入要写入的文件')
+f = open(t, 'w+)
+ls = ['a', 'b', 'c']
+f.write(ls)
+f.seek(0)
+for line in f:
+    print(line)
+f.close()
+结果:abc
+
+15.将一个文件与程序中的对象关联起来的过程，称为文件打开
+
+16.
