--- a/Python/二级/选择题.md
+++ b/Python/二级/选择题.md
@@ -71,4 +71,18 @@ f.close()
 
 15.将一个文件与程序中的对象关联起来的过程，称为文件打开
 
-16.
+16.数据的存储结构:数据的逻辑结构在计算机中的表示
+
+17.线性链表：存储空间不一定联想，且各元素的存储顺序是任意的
+
+18.在深度为7的满二叉树中，**叶子** 结点总个数是：2^(7-1)
+
+19.关于面向对象的基础，选项正确的是：a
+a.继承是指类之间共享属性和操作的机制
+b.基础是指各对象之间的共同性质
+c.继承是指一组对象所具有的相似性质
+d.继承是指一个对象具有另一个对象的性质
+
+20.软件危机：
+正确：软件质量难以控制、软件开发生产率低、软件成本不断提高。
+错误：软件过程不规范
