--- a/Python/二级/选择题.md
+++ b/Python/二级/选择题.md
@@ -75,7 +75,9 @@ f.close()
 
 17.线性链表：存储空间不一定联想，且各元素的存储顺序是任意的
 
-18.在深度为7的满二叉树中，**叶子** 结点总个数是：2^(7-1)
+18.
+在深度为7的满二叉树中，**叶子结点**总个数是：2^(7-1)
+                     **结点个数总共**是2^7-1=127
 
 19.关于面向对象的基础，选项正确的是：a
 a.继承是指类之间共享属性和操作的机制
@@ -94,4 +96,46 @@ b.python的str、tuple和list类型都属于序列类型。（对）
 22.关于数据组织的维度，描述错误的是：
 a.一维数据采用线性方式组织，对应于数学中的数组和集合等概念
 b.数据组织存在维度、字典类型用于一维和二维数据。（错，字典类型属于三维数据类型）
+
+23.数据的逻辑结构是指反映数据元素之间逻辑关系的数据结构
+   数据的存储结构有顺序、链接、索引等存储方式
+   数据结构指相互有关联的数据元素的集合
+
+24.关于软件工i程的描述：
+正确：
+软件工程是应用于计算机软件的定义、开发和维护的一整套方案、工具、文档和实践标准和工序
+错误：
+软件工程工具是完成软件工程项目的技术手段
+软件工程包括3要求：结构化、模块化、面向对象
+软件工程方法支持软件的开发、管理、文档生成
+
+25.在软件工程详细设计几段，以下选项不是详细设计工具的是
+a.判断表
+b.CSS
+c.PDL
+d.程序流程图
+答案：b
+
+26.以下选项中表示关系表中的每一横行的是：
+a.元组
+b.列
+c.码
+d.属性
+答案：a
+
+27.将E-R图转换为关系模式时，可以表示实体与联系的是：关系
+
+28.关于Python循环结果，以下选项描述错误的是：
+a.遍历循环中的遍历结构可以说字符串、文件、组合数据类型和range（）函数等。（√）
+b.break用来跳出最内存for或者while循环，脱离该循环后程序从循环代码后继续执行
+c.每个contiune语句只有能量跳出当前循环（错，continue只能结束当前循环，开始下一个循环）
+d.python通过for、while等保留着字提供遍历循环和无线循环结构
+
+29.关于数据组织的维度：
+正确：
+高维数据由键值对类型的数据构成，采用对象方式组织
+二维数据采用表格方式组织，对应于数据中的矩阵
+一维数据采用线性方法组织，对应于数学中的数组和集合等概念
+错误：
+数据组织存在维度，字典类型用于表示一维和二维数据（错，表示三维）
 
