--- a/Python/二级/编程题.md
+++ b/Python/二级/编程题.md
@@ -179,6 +179,20 @@ def a13():
         for j in range(8):
             print(ls[random.randint(0, 35)], end='')
 
+def a14():
+    """
+    如果用户输入整数，则直接输出并退出
+    如果用户输入的不是整数，则要求用户重新输入
+    """
+    try:
+        txt = input("请输入一个整数")
+        while eval(txt) != int(txt):
+            txt = input("输入的不是整数，请重新输入!")
+    except:
+        return a14()
+    retrun eval(txt)
+
+
 
 if __name__ == '__main__':
     a13()
