--- a/Python/base/类与对象know/对象.md
+++ b/Python/base/类与对象know/对象.md
@@ -1,19 +1,26 @@
-当您有一个任意的对象（也许是一个作为参数传递给函数的对象）时，可能希望知道一些关于该对象的情况。
-如希望python告诉我们：
-对象的名称是什么？
-这是哪种类型的对象？
-对象知道些什么？
-对象能做些什么？
-对象的父对象是谁？
+# 一、概念
+对象是一种数据抽象或数据结构抽象，用来表示程序中需要处理或已处理的信息
+在Python程序设计中，对象有3个基本特征:
+本征值(identity)
+型式(type)
+值(value)
+也就是拥有这三个特征即可以成为一个对象。
 
-一、有名称的对象都将名称存储在其 __name__ 属性中。注：名称是从对象而不是引用该对象的变量中派生的。
-二、通过type()方法查看对象的类型
-三、通过id()方法查看对象的标识
-四、通过hasattr(对象，属性)和getattr(对象，属性)来判断对象是否含有某个属性
-五、用 callable() 函数测试对象的可调用性
-六、用 isinstance() 函数测试对象，以确定它是否是某个特定类型或定制类的实例,例如：
-    isinstance(42, str）-> False
-    isinstance("python", str) -> True
-七、issubclass(判断类，继承类) 函数使我们可以查看一个类是不是继承了另一个类，即左边是否继承了右边
-    例如：
-    issubclass(SuperHero, Person)
+# 二、操作
+一个任意的对象（也许是一个作为参数传递给函数的对象），我们希望查看对象的一些信息，例如:
+1.对象的名称是什么？
+  有名称的对象都将名称存储在其 __name__ 属性中。注：名称是从对象而不是引用该对象的变量中派生的。
+2.这是哪种类型的对象？
+  通过type()方法查看对象的类型
+  通过id()方法查看对象的标识
+  用 isinstance() 函数测试对象，以确定它是否是某个特定类型或定制类的实例,例如：
+  isinstance(42, str）-> False
+  isinstance("python", str) -> True
+3.对象知道些什么？
+  通过hasattr(对象，属性)和getattr(对象，属性)来判断对象是否含有某个属性
+  用 callable() 函数测试对象的可调用性
+4.对象能做些什么？
+5.对象的父对象是谁？
+  issubclass(判断类，继承类) 函数使我们可以查看一个类是不是继承了另一个类，即左边是否继承了右边
+  例如：
+  issubclass(SuperHero, Person)
