--- a/Python/base/类与对象know/对象.md
+++ b/Python/base/类与对象know/对象.md
@@ -24,3 +24,9 @@
   issubclass(判断类，继承类) 函数使我们可以查看一个类是不是继承了另一个类，即左边是否继承了右边
   例如：
   issubclass(SuperHero, Person)
+
+# 三、应用
+1.可以赋值给一个变量
+2.可以添加到对象集合中
+3.可以作为参数传递给函数
+4.可以当作函数的返回值。例如:装饰器
