--- a/Python/base/类与对象know/对象.md
+++ b/Python/base/类与对象know/对象.md
@@ -1,10 +1,31 @@
 # 一、概念
-对象是一种数据抽象或数据结构抽象，用来表示程序中需要处理或已处理的信息
-在Python程序设计中，对象有3个基本特征:
-本征值(identity)
-型式(type)
-值(value)
-也就是拥有这三个特征即可以成为一个对象。
+  对象是一种数据抽象或数据结构抽象，用来表示程序中需要处理或已处理的信息
+  在Python程序设计中，对象有:
+# （1）三个基本特征
+  本征值(identity)
+  型式(type)
+  值(value)
+  也就是拥有这三个特征即可以成为一个对象
+# （2）id()
+  查看对象的标识(本征值)
+# （3）type()
+  # 1、概念
+  type 可以创建python中的对象，type本身也是对象
+  type 继承object,type是由自己(type)创建的
+  object 也是通过type创建的
+  type 是由自身创建的
+  # 2、作用
+  1、查看对象的类型
+  2、创建类
+  3、查看一个对象是由谁创建的
+  例如:
+  type(int)
+  结果: type,说明int对象是由type来创建的
+# （4）class
+  声明一个对象
+# （5）object
+  object 是所有类的基类，python中所有的类都是继承自,object是由type创建的
+  当用class声明一个类时，会调用type创建一个继承object的对象
 
 # 二、操作
 一个任意的对象（也许是一个作为参数传递给函数的对象），我们希望查看对象的一些信息，例如:
@@ -12,7 +33,6 @@
   有名称的对象都将名称存储在其 __name__ 属性中。注：名称是从对象而不是引用该对象的变量中派生的。
 2.这是哪种类型的对象？
   通过type()方法查看对象的类型
-  通过id()方法查看对象的标识
   用 isinstance() 函数测试对象，以确定它是否是某个特定类型或定制类的实例,例如：
   isinstance(42, str）-> False
   isinstance("python", str) -> True
@@ -30,3 +50,5 @@
 2.可以添加到对象集合中
 3.可以作为参数传递给函数
 4.可以当作函数的返回值。例如:装饰器
+
+
