--- a/Python/high/魔术方法.md
+++ b/Python/high/魔术方法.md
@@ -3,6 +3,7 @@
 2、魔法方法的名称不能随意更改
 3、魔法方法可以对当前这个类进行功能拓展
 4、魔法方法可以更改当前这个类的类型
+5、魔法方法是python自带的，和类没有关系，不是因为基础object而有的
 
 二、例子
 class Student:
@@ -23,7 +24,15 @@ class Student:
     # 如果一个类没有设置__iter__方法，会先去执行__getitem__方法，让对象可以迭代，如果两个都没有，会报错
     def __iter__(self):
         pass
-        
+    
+    # 修改该对象的打印输出(print)结果
+    # 当使用print进行实例化对象打印时，自动调用__str__方法
+    def __str__(self):
+        return ','.join(self.lst)
+    
+    # 修改该对象调试模式的结果(在jupyter中直接一个变量为一行的输出结果)
+    def __repr__(self):
+        return ','.join(self.lst)
 
 student = Student(['a', 'b', 'c'])
 #没有设置魔法方法时，直接迭代对象会报错
