--- a/Python/base/类与对象know/三大特征.md
+++ b/Python/base/类与对象know/三大特征.md
@@ -1,9 +1,9 @@
-一、封装（提高程序的安全性）
+# 一、封装（提高程序的安全性）
   将数据（属性）和行为（方法）包装到类对象之中。在方法内部对属性进行操作，在类对象的外部调用方法。这样，无需关心方法内部的具体实现细节，从而降低了复杂度。
   在Python没有专门的修饰符用于属性的私有，但是可以在准备私有化的属性（包括方法、数据）名字前面加双下划线。
   如果要调用那些私有属性，可以使用property函数。
 
-二、继承（提高代码的复用性，实现属性和方法的继承）
+# 二、继承（提高代码的复用性，实现属性和方法的继承）
 1、继承者一般称为子类，被继承者一般称为父类
 2、子类拥有父类的全部方法的和属性
 3、子类可以对父类中的方法进行**重写**，如果子类重写了父类的方法，那么调用同样的方法时，就使用子类的方法
@@ -65,7 +65,46 @@
           print("leave C")
   c = C()
 
-三、多态（提高代码的可扩展性和可维护性）
-例如:
-repr()函数，它能够针对输入的任何对象返回一个字符串。这就是多态的代表之一
-有Cat和Dog两个类，都继承了类Animal，它们都有talk()方法，输入不同的动物名称，会得出相应的结果。
+# 三、多态（提高代码的可扩展性和可维护性）
+## 1、类的多态实现：
+  子类继承并重写父类的方法
+
+## 2、其他多态例子：
+  1.repr()函数
+    它能够针对输入的任何对象返回一个字符串。这就是多态的代表之一
+    有Cat和Dog两个类，都继承了类Animal，它们都有talk()方法，输入不同的动物名称，会得出相应的结果。
+  2.鸭子类型
+    概念：一种动物长得像鸭子，叫起来也像鸭子，那么这个动物就是一个鸭子
+    实现: 多个类中实现了同一个方法(当前的方法名称一样)
+          不关注方法的实现方式，只看方法名称，python的关注点是这个对象的类型
+    实例1:
+    class Cat：
+        def say(self):
+            print("i am a cat")
+    
+    class Dog：
+        def say(self):
+            print("i am a dog")
+
+    class Duck：
+        def say(self):
+            print("i am a duck")
+
+    animal_list = [Cat, Dog, Duck]
+    for animal in animal_list:
+        animal().say()
+
+    实例2:
+    list_a = [1, 2]
+    list_b = [3, 4]
+    list_a.extend(list_b)
+    print(list_a)
+    set_data = set()
+    set_data.add(5)
+    set_data.add(6)
+    list_a.extend(set_data)
+    print(list_a)
+    #list_a是一个列表类型，为什么集合也可以进行追加？
+    """
+    extend只要是迭代类型就可以进行追加，list/set都是可迭代类型(都实现了__iter__)
+    """
