--- a/Python/base/类与对象know/对象.md
+++ b/Python/base/类与对象know/对象.md
@@ -51,4 +51,7 @@
 3.可以作为参数传递给函数
 4.可以当作函数的返回值。例如:装饰器
 
+5.如果要进行类的类型判断，使用isinstance而不是type
+  type判断的是类与类之间的引用地址是否相等，不判断是否有继承关系
+  创建出一个类后，类存储在内存中，存储地址是唯一的
 
