--- a/Python/base/类与对象know/概念.md
+++ b/Python/base/类与对象know/概念.md
@@ -63,12 +63,17 @@ stu1.show = show
 stu1就多了一个方法
 
 三、类的理解。
-(1)类属性与实例属性
+(1)类属性(变量)与实例属性
 1、一个类被实例化，这个实例会拥有这个类的类属性，此时**修改类的类属性，实例的这个属性（类属性）**也会变化
-2、当这个**实例的类属性被赋值**之后，这个属性会变成**实例属性**，此时修改类属性不会改变实例属性。
-3、类属性不受实例属性左右。
+2、当这个**实例的‘类属性’被修改**之后，会重新创建一个实例变量，而不会对类变量进行修改，此时实例拥有了**与类变量同名的实例变量**。
+3、修改类属性不会改变实例属性，修改实例属性也不会改变类属性。
 4、如果删除一个实例的与类属性同名的实例属性，该同名属性又会变为类属性，受类属性修改而变化
-5、在类确定或者实例化之后，也可以增加和修改属性，其方法就是通过类或者实例的点号操作来实现，即object.attribute，可以实现对属性的修改和增加。
+5、在类确定或者实例化之后，也可以增加和修改(实例)属性，其方法就是通过类或者实例的点号操作来实现，即object.attribute，可以实现对属性的修改和增加。
+6、同时存在同名的类变量和实例变量时，实例.变量名只会查找到实例变量，这是因为实例会先从__init__中查找变量
+7、类属性可以共享于多个实例对象
+8、多继承中类属性与实例属性及方法的调用顺序:
+   ## 不同的继承关系会调用不同的搜索方式（c3算法）
+   查看类属性/方法的调用顺序:print(class.__orm__)
 
 (2)类的方法
 方法是类内部定义函数，只不过这个函数的第一个参数是self。（可以认为方法是类属性，但不是实例属性）
@@ -79,4 +84,44 @@ stu1就多了一个方法
 调用非绑定方法，例如super调用被重写的父类方法
 
 
+# 四、抽象基类
+  # 尽量少用，如果技术不够会导致约束限制不符合编程逻辑
+  """
+  场景一
+  抽象基类不能实例化
+  继承抽象基类必须重载内部方法
+  """
+  ```
+  s = Sized()
+  class Test(Sized):
+      def __len__(self):
+          pass
+  ```
+  """
+  场景二
+  实现某个类的时候，必须实现指定的方法
+  框架中比较多，例如django的缓存功能，redis/cache/memorycache，用户使用哪一种是不确定的，因此这三种需要在方法调用上统一
+  因为不确定用户使用的是redis缓存还是文件缓存，两种缓存不一样，必须让用户自己实现
+  """
+  ```
+  #需要一个缓存基础类CacheBase
+  #如果用户没有重新set(设置缓存)和get(获取缓存)方法，抛出异常
+  #这样设置在继承的时候不会出现，但是在调用方法的时候会抛出异常
+  class CacheBase:
+      def get(self):
+          raise NotImplementedError
+    
+      def set(self):
+          raise NotImplementedError
+  #这时候可以用抽象基类来实现上述功能
+  import abc
+  class CacheBase:
+      @abc.abstractmethod
+      def get(self):
+          pass
+      @abc.abstractmethod
+      def set(self):
+          pass
+  #这样继承类的时候如果没有实现对应抽象方法，会提示
+  ```
 
