--- a/Python/base/类与对象know/类.md
+++ b/Python/base/类与对象know/类.md
@@ -1,16 +1,15 @@
-一、定义
-类：多个相似事物组成的群体的集合，具有相同的属性
-对象：
-对象的创建又被称为类的实例化，有了实例，就可以调用类的内容
-定义方法def methodname，在类之外定义的称为函数，在类之内定义的称为方法
+# 一、类
+# (1)概念
+多个相似事物组成的群体的集合，具有相同的属性
 
 
-二、类的组成
+# 二、类的组成
 1、类属性：
 定义在类里面，类中方法之外的变量，被该类的所有对象所共享
 
 2、实例方法:
 写在类里面，没有任何装饰的方法，第一个参数必须要默认传实例对象，一般习惯用self。
+一个类的方法里面带有self参数，就可以称为实例方法
 **只能被实例对象调用(Python3 中，如果类调用实例方法，需要显示的传self, 也就是实例对象自己)**
 ``
 class A:
