--- a/Python/base/类与对象know/类.md
+++ b/Python/base/类与对象know/类.md
@@ -2,14 +2,15 @@
 # (1)概念
 多个相似事物组成的群体的集合，具有相同的属性
 
-
-# 二、类的组成
-1、类属性：
+# (2)类的组成
+# 1、类属性：
 定义在类里面，类中方法之外的变量，被该类的所有对象所共享
 
-2、实例方法:
-写在类里面，没有任何装饰的方法，第一个参数必须要默认传实例对象，一般习惯用self。
-一个类的方法里面带有self参数，就可以称为实例方法
+# 2、实例方法:
+1.写在类里面，没有任何装饰的方法，第一个参数必须要默认传实例对象，一般习惯用self。反过来，一个类的方法里面带有self参数，就可以称为实例方法
+2.实例方法是类内部定义函数，只不过这个函数的第一个参数是self。（可以认为方法是类属性，但不是实例属性）
+3.必须将类实例化之后，才能通过实例调用该类的方法。调用的时候在方法后面要跟括号（括号中默认有self参数，但是不写出来），通过实例调用方法，我们称这个方法绑定在实例上。
+调用绑定方法，实例.方法名()，调用非绑定方法，例如super调用被重写的父类方法
 **只能被实例对象调用(Python3 中，如果类调用实例方法，需要显示的传self, 也就是实例对象自己)**
 ``
 class A:
@@ -17,7 +18,7 @@ class A:
         pass 
 ``
 
-3、静态方法
+# 3、静态方法
 由@staticmethod装饰的方法，能够使用类名直接访问
 对参数没有要求
 ``
@@ -26,9 +27,10 @@ def static_method():
     pass
 ``
 
-4、类方法
+# 4、类方法
 由@classmethod装饰的方法,能够使用类名直接访问
 第一个参数必须要默认传类，一般习惯称为cls。
+
 ``
 @classmethod
 def class_method(cls):
@@ -36,13 +38,13 @@ def class_method(cls):
 ``
 **静态方法和类方法既可以通过实例调用，也可以通过类来调用，而一般方法必须用通过绑定实例调用。**
 
-5、初始化方法
+# 5、初始化方法
 class A:
     def __init__(self, name):
         self.name = name  # self.name称为实体属性，用赋值操作将局部变量name的值赋给了实体属性
 
 
-6、实例动态绑定属性和方法。
+# 6、实例动态绑定属性和方法。
 类的实例可以再次绑定属性和方法
 例如：
 class Student:
@@ -61,8 +63,12 @@ def show():
 stu1.show = show
 stu1就多了一个方法
 
-三、类的理解。
-(1)类属性(变量)与实例属性
+# 7、总结
+  1.实例方法用的最多
+  2.类方法可以返回这个类的实例
+  3.静态方法可以不用返回任何实例属性与类的实例
+
+# (3)类的理解:
 1、一个类被实例化，这个实例会拥有这个类的类属性，此时**修改类的类属性，实例的这个属性（类属性）**也会变化
 2、当这个**实例的‘类属性’被修改**之后，会重新创建一个实例变量，而不会对类变量进行修改，此时实例拥有了**与类变量同名的实例变量**。
 3、修改类属性不会改变实例属性，修改实例属性也不会改变类属性。
@@ -74,16 +80,7 @@ stu1就多了一个方法
    ## 不同的继承关系会调用不同的搜索方式（c3算法）
    查看类属性/方法的调用顺序:print(class.__orm__)
 
-(2)类的方法
-方法是类内部定义函数，只不过这个函数的第一个参数是self。（可以认为方法是类属性，但不是实例属性）
-必须将类实例化之后，才能通过实例调用该类的方法。调用的时候在方法后面要跟括号（括号中默认有self参数，但是不写出来。）
-
-通过实例调用方法，我们称这个方法绑定在实例上。
-调用绑定方法，实例.方法名()
-调用非绑定方法，例如super调用被重写的父类方法
-
-
-# 四、抽象基类
+# (4)抽象基类
   # 尽量少用，如果技术不够会导致约束限制不符合编程逻辑
   """
   场景一
@@ -124,3 +121,39 @@ stu1就多了一个方法
   #这样继承类的时候如果没有实现对应抽象方法，会提示
   ```
 
+# (5)私有属性
+  私有属性无法被实例对象直接获取
+  在继承关系的子类也无法直接获取到私有属性
+  私有属性只能被当前这个类的方法获取
+  在python中，私有属性其实是python在执行过程中对私有属性的名称进行了重命名
+  _类名.__属性名称
+
+# 二、应用
+静态方法与类方法返回类对象时的区别:
+```
+"""
+静态方法调用:类.方法名
+类方法调用:类.方法名
+区别在于类方法需要传入一个cls参数，这个参数指向类本身
+"""
+class Date:
+    def __init__(self, year, month, day):
+        self.year = year
+        self.month = month
+        self.day = day
+
+    def __str__(self):
+        reaturn F"{self.year}/{self.month}/{self.day}"
+
+    @staticmethod
+    def parse_from_string(date_str):
+        #静态方法返回类的时候时写上当前的类名，硬编码，如果类名更改，那么返回的类名也必须保持一致
+        year, month, day = tuple(date_str.split("-"))
+        return Date(int(year), int(month), int(day))
+    
+    @classmethod
+    def parse_from_string(cls, date_str):
+        #cls参数指向当前这个类，不能与实例搞混
+        year, month, day = tuple(date_str.split("-"))
+        return cls(int(year), int(month), int(day))
+```
