--- a/Python/base/类与对象know/类.md
+++ b/Python/base/类与对象know/类.md
@@ -128,6 +128,13 @@ stu1就多了一个方法
   在python中，私有属性其实是python在执行过程中对私有属性的名称进行了重命名
   _类名.__属性名称
 
+# (6)多继承
+  # 1、mixin模式
+    特点
+    1.mixin模式功能单一(比如只有一个方法)
+    2.不和基类关联，可以和任意基类组合，基类可以不和mixin关联就能初始化成功
+    3.不使用super方法
+
 # 二、应用
 静态方法与类方法返回类对象时的区别:
 ```
