--- a/Python/middle/序列类型.md
+++ b/Python/middle/序列类型.md
@@ -51,3 +51,31 @@ lst[::2] = ['a', 'b', 'c'] # 隔一个修改一个
 lst[:3] = []  # 删除列表前三个元素
 del lst[:3]  # 连续切片元素删除
 del lst[::2]  # 不连续切片元素删除
+
+将一个类变为可切片对象，参考代码：
+import numbers
+class Group:
+    def __init__(self, staffs)
+        self.staffs = staffs
+    
+    def __reversed__(self):
+        self.staffs.reverse()
+    
+    def __len__(self):
+        return len(self.staffs)
+    
+    def __iter__(self):
+        return iter(sefl.staffs)
+
+    def __getitem__(self, item):
+        cls = type(self)
+        if isinstance(item, slice):
+            return cls(staffs=self.staffs[item])
+        elif isinstance(item, numbers.Interal):
+            return cls(staffs=[self.staffs[item]])
+
+    def __contains__(self, item):
+        if item in self.staffs:
+            return True
+        else:
+            return False
