--- a/Python/middle/序列类型.md
+++ b/Python/middle/序列类型.md
@@ -1,4 +1,4 @@
-一、序列类型的分类
+# 一、序列类型的分类
 1、容器序列: list tuple deque
    容器说明序列里面可以放任何类型
 2、扁平序列: str bytes bytearray array.array
@@ -6,7 +6,7 @@
 3、可变序列: list deque bytearray array
 4、不可变:   str tuple bytes
 
-二、序列类型的继承关系
+# 二、序列类型的继承关系
 from collection import abc
 abc中有容器相关的数据结构和抽象基类
 __all__中的Sequence,MutableSequence分别代表序列相关的不可变序列和可变序列
@@ -20,12 +20,12 @@ Sequence继承了两个类:
 MutableSequence继承了Sequence，同时实现了__getitem__和__delitem__魔术方法，使其可以增加和删除(可变)
 同时还实现了append,extend,pop,remove等方法
 
-三、序列的+、+=和extend的区别
+# 三、序列的+、+=和extend的区别
 +后面只能接同类型
 +=后面可以接任意的序列类型，本质是通过__iadd__魔术方法调用extend方法来该添加
 extend也可以加任意类型，但是它**没有返回值**
 
-三、序列的切片
+# 四、序列的切片
 [start:end:step]
 start表示切片的起始位置，默认为0
 end表示切片的截止位置(不包含)，默认为列表长度
@@ -79,3 +79,20 @@ class Group:
             return True
         else:
             return False
+
+五、序列的排序
+# bisect
+#用来处理已排序的序列，用来维持已排序的序列，升序
+#二分查找
+应用场景，想要不断往列表中添加数据并且维持数据的大小顺序
+import bisect
+inter_list = []
+bisect.insort(bisect, 3)
+bisect.insort(bisect, 2)
+bisect.insort(bisect, 5)
+bisect.insort(bisect, 6)
+bisect.insort(bisect, 1)
+print(inter_list)
+print(bisect.bisect_left(bisect, 3)) #查看插入元素的位置
+比如学生成绩90-100都算A，成绩列表用["ABCDE"]表示，这时同时插入90，91两个分数可能出现91在90之前的情况，
+这时可用bisect
