--- a/Python/high/装饰器.md
+++ b/Python/high/装饰器.md
@@ -203,3 +203,19 @@ class email_logit(logit):
         # 这里就不做实现了
         pass
 从现在起，@email_logit将会和@logit产生同样的效果，但是在打日志的基础上，还会多发送一封邮件给管理员。
+
+七、装饰器实现动态属性
+form datetime import datetime
+class User:
+    def __init__(name, birthday):
+        self.name = name
+        self.birthday = birthday
+        self._age = 0
+    
+    @property
+    def age(self):
+        retrun datetime.now().year - self.birthday.year
+    
+    @age.setter
+    def age(self, value):
+        self._age = value
