--- a/Python/实战/es/查找索引.md
+++ b/Python/实战/es/查找索引.md
@@ -1,5 +1,6 @@
-一、浏览器地址栏输入：
-   http://localhost:9200/_cat/indices?v&pretty
+## 一、公网elasticsearch查看已有索引及大小
+# 浏览器地址栏输入：
+http://localhost:9200/_cat/indices?v&pretty
 
 二、利用pyelasticsearch
 import pyelasticsearch as pyes
