--- a/Python/base/错误和异常.md
+++ b/Python/base/错误和异常.md
@@ -52,3 +52,16 @@ with上下文管理可以自动管理资源
 在with代码执行完毕后自动还原进入该代码之前的现场或上下文。不论何种原因跳出with语句，不论是否发生异常，总能保证资源的正确释放，极大简化工作。
 应用场景: 文件操作、网络通信相关场合。
 ```
+
+# 五、traceback模块
+```
+# 使用场景: 当使用了try...except结构后又想看到正常报错信息
+import traceback
+try:
+    num = 1/0
+except:
+    traceback.print_exc()
+    # 将异常信息输出到指定文件中
+    with open("log.txt", "a") as f:
+        traceback.print_exc(file=f)
+```
