--- a/Python/base/错误和异常.md
+++ b/Python/base/错误和异常.md
@@ -65,3 +65,27 @@ except:
     with open("log.txt", "a") as f:
         traceback.print_exc(file=f)
 ```
+
+# 六、自定义异常类
+```
+"""
+程序开发中，有时候我们需要自己定义异常类
+自定义异常类一般是运行时异常，通常继承Exception或其子类即可。命名一般以Error、Exception为后缀
+自定义异常由raise语句主动抛出
+例:
+"""
+class AgeException(Exception):
+    def __init__(self.errorInfo):
+        Exception.__init__(self)
+        self.errorInfo = errorInfo
+
+    def __str__(self):
+        return str(self.errorInfo)+"年龄错误！应该在1-150之间"
+
+if __name__ == "__main__":
+    age = int(input("输入一个年龄:"))
+    if age<1 or age>150:
+        raise AgeError(age)
+    else:
+        print("正常的年龄:", age)
+```
