--- a/Web/爬虫/反爬方法.md
+++ b/Web/爬虫/反爬方法.md
@@ -18,5 +18,13 @@
 反爬原理: 想返回的响应中添加假数据污染数据库，通常假数据不会被正常用户看到
 解决方法: 长期运行，核对数据库中数据同实质页面中数据对应情况，如果存在问题/仔细分析响应内容
 
-2.4 
+2.4 阻塞任务队列
+反爬原理: 通过生成大量垃圾url，从而阻塞任务队列，降低爬虫的实际工作效率
+解决方法: 观察运行过程中请求响应状态/仔细分析源码获取垃圾url生成规则，对URL进行过滤
+
+2.5 阻塞网络IO
+反爬原理: 发送请求获取相应的过程实际上就是下载过程，在任务队列中混入一个大文件url，当爬虫在进行该请求时将会占用网络io，如果是多线程则会占用线程
+解决方法: 观察爬虫运行状态/多线程对请求线程时/发送请求线程时的状态
+
+2
 ```
