--- a/Linux/例子.md
+++ b/Linux/例子.md
@@ -1,7 +1,30 @@
 ## 一、Linux定时备份文件
 ```
 1、编写一个脚本.sh
-sudo vim copyFile.sh
+sudo vim copyfile.sh
 填入:
+#!/bin/bash
 
+#设置环境变量
+export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/root/bin
+
+#复制项目
+sudo cp -r filepath goalpath
+
+#判断是否备份成功        
+if [ $? -ne 0 ];then
+    echo “备份失败”
+else
+    echo "备份成功"
+fi
+
+2、添加脚本执行权限
+chmod +x copyFile.sh
+
+3、定时任务
+crontab -e # 设置定时任务
+crontab -l # 查看定时任务
+例如:
+0 10 * * * sh ./copyfile.sh > ./copyfile.log
+# 每天早上十点执行copyfile.sh脚本，结果记录在cpyfile.log中
 ```
