--- a/Linux/例子.md
+++ b/Linux/例子.md
@@ -27,4 +27,11 @@ crontab -l # 查看定时任务
 例如:
 0 10 * * * sh ./copyfile.sh > ./copyfile.log
 # 每天早上十点执行copyfile.sh脚本，结果记录在cpyfile.log中
+几个例子：
+每五分钟执行一次： */5 * * * *
+每小时执行一次 ： 0 * * * *
+每天执行一次： 0 0 * * *
+每周执行一次： 0 0 * * 0
+每月执行一次： 0 0 1 * *
+每年执行一次： 0 0 1 1 *
 ```
