--- a/Linux/错误.md
+++ b/Linux/错误.md
@@ -8,3 +8,20 @@
 启示：我们可以通过修改〜/ .bashrc中添加任何其他的命令别名
 ```
 
+## 二、sudo无法解析主机
+```
+原因: 修改了主机的ubuntu设备名称，后面没有配置
+解决方法: 修改hosts文件
+sudo vim /etc/hosts
+修改127.0.1.1 后面的设备名称，例如现在的名称的trizhi2，但是hosts里是trizhi-desktop，将其修改为trizhi2
+```
+
+## 三、ubuntu无法打开终端
+```
+原因:安装了某个版本的python导致默认配置对应不上
+解决方法:
+cd /usr/bin
+ll python* 查看可用的python链接(绿色表示有效的)
+sudo vim gnome-terminal 打开gnome-terminal配置文件
+将文件的第一行修改为: #! /usr/bin/python3.8  (python3.8是ll出现的绿色链接，视具体情况修改)
+```
