--- a/elasticsearch/索引.md
+++ b/elasticsearch/索引.md
@@ -12,7 +12,7 @@ schema = es.get_mapping()
 pprint(schema)
 ```
 
-## CUD索引
+## 二、CUD索引
 ```
 # 注意: 
 # elasticsearch的版本需要在7.8.0或以下
@@ -38,4 +38,23 @@ mapping = {
 # 分词器 analyzer 和 搜索分词器 search_analyzer 为 ik_max_word，即中文分词插件，默认的英文分词器。
 # result = es.indices.put_mapping(index='youyi_wenju', body=mapping, doc_type="doc")
 # print(result)
+```
+
+## 三、重建索引
+```
+在重建索引之前，首先要考虑一下重建索引的必要性，因为重建索引是非常耗时的。 ES的reindex api不会去尝试设置目标索引，不会复制源索引的设置，所以我们应该在运行_reindex操作之前设置目标索引，包括设置映射（mapping），分片，副本等。
+
+第一步，和创建普通索引一样创建新索引。当数据量很大的时候，需要设置刷新时间间隔，把refresh_intervals设置为-1，即不刷新,number_of_replicas副本数设置为0（因为副本数可以动态调整，这样有助于提升速度）。
+{
+    "settings": {
+
+        "number_of_shards": "50",
+        "number_of_replicas": "0",
+        "index": {
+            "refresh_interval": "-1"
+        }
+    }
+    "mappings": {
+    }
+}
 ```
