--- a/Python/实战/正则.md
+++ b/Python/实战/正则.md
@@ -1,4 +1,101 @@
+### 一、实用参考文章:
+#### 1、匹配括号里面的内容
+https://blog.csdn.net/weixin_43235307/article/details/120219815
+
+### 二、例子
+**1、只保留中文、英文和指定标点符号**
 ```
-# 获取{及{之前的部分
-p1 = re.compile(u'^([^\{]*)\{.*$')
+con = "b0111111;1:cs<=7'b0000110;2:cs<=7'b1011011;endcase//选定一个数码管//在数码管上显示bs的值."
+# 不想保留哪些就去掉哪些
+cop = re.compile("[^\u4e00-\u9fa5^.^a-z^A-Z^0-9_.!+-=——,$%^，。？、~@#￥%……&*《》<>「」{}【】()/\\\[\]'\"]")
+subcon = re.sub(cop, "", con)
+print(subcon)
+```
+
+**2、字符串的标点符号**
+```
+import string
+text = 'adfadf,.,d.,sf.;,we;,f;d,fw;efw;elf;wle,fw;'
+enbiaodian = string.punctuation
+pat = r"[%s]+" % enbiaodian
+res = re.sub(pat, "", text)  # 去除英文标点符号
+print(res)
+# pip install zhon
+from zhon.hanzi import punctuation
+text = "中文标点: ！？｡＂＃＄％＆＇（）＊＋，－／：；＜＝＞＠［"
+zhbiaodian = punctuation
+pat = r"[%s]+" % zhbiaodian
+res = re.sub(pat, "", text)  # 去除标点符号
+print(res)
+```
+
+**3、删除URL**
+```
+text = "网址是:https://www.baidu.com,欢迎大家访问"
+t1 = re.sub("http*\S+", " ", text)  # 删除http及之后
+print(t1)
+t2 = re.sub(r'http(.?)://(.*?)\.(net|com|cn|org|info|edu|gov|uk|de|ca|jp|fr|au|us|ru|ch|it|nel|se|no|es|mil)', '', text)
+print(t2)
+t3 = re.sub(r'www\.(.*?)\.(net|com|cn|org|info|edu|gov|uk|de|ca|jp|fr|au|us|ru|ch|it|nel|se|no|es|mil)', '', text)
+print(t3)
+```
+
+**4、获取路径中包含的某个中间路径之后的内容**
+```
+pat2 = re.compile('(?<=/yourmidpath).*$')
+# 例如:
+path = 'D:/test/yourmidpath/needpathorfile'
+s1 = re.findall(pat2, path)
+print(s1)
+# 运行结果
+# ['/needpathorfile']
+```
+
+**5、匹配任意多个空格**
+```
+pat3 = re.compile(r' +')
+s1 = '前        后'
+s2 = re.sub(' +', ' ', s1)
+或者
+s2 = re.sub(r'\s+', ' ', s1)
+print(s2)
+# 运行结果:
+# 前 后
+```
+
+**6、去除三种括号及里面内容**
+```
+text = re.sub(u"\\(.*?\\)|\\{.*?}|\\[.*?]", '', text)
+```
+
+**7、匹配字符串中任意由两个英文字母和四个数字组成的字符串，并将英文和数字分开变为元组形式**
+```
+pat = re.compile('([a-zA-Z]{2})([0-9]{4})')
+# 例如：
+s1 = 'sf2134dsfs32dsfdfs3421fsdf'
+s2 = re.findall(pat, s1)
+print(s2)
+print(type(s2[0]))
+# 运行结果:
+# [('sf', '2134'), ('fs', '3421')]
+# <class 'tuple'>
+```
+
+**8、匹配区域单位名称**
+```
+data_list = ['北京市南瓜村', '陕西省西安市雁塔区大村', '西班牙镇街道', '北京市海淀区', '黑龙江省佳木斯市汤原县大村', '内蒙古自治区赤峰市',
+            '贵州省黔南州贵定县', '新疆维吾尔自治区伊犁州奎屯市']
+pat = r'([\u4e00-\u9fa5]{2,5}?(?:省|自治区|市)){0,1}([\u4e00-\u9fa5]{2,7}?(?:区|县|州)){0,1}([\u4e00-\u9fa5]{2,7}?(?:村|镇|街)){1}'
+for data in data_list:
+    pattern = re.compile(pat)
+    try:
+        m = pattern.search(data)
+        print(m.group())
+    except:
+        continue
+```
+
+**获取{及{前面的内容**
+```
+pat = re.compile(u'^([^\{]*)\{.*$')
 ```
